# dtsu666-mqtt-gateway

./: README.md  config.json  config.py  datablocks.py  dtsu666_constants.py  dtsu666_emulator.py  dtsu666_proxy.py  dtsu666_reader.py  dtsu666emulator.py  dtsu666proxy.py  dtsu666reader.py  gateway_debug.py  gateway_service.py  main.py  pyproject.toml
Homeassistant/: mqtt_dtsu666.yaml
